--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ main{
 /*------------------top bar----------------------*/
 .top-bar{
     background: var(--background-gradient-blue);
-    height: 5vh;
     display: grid;
     grid-template-columns: 25% 1fr 25%;
     text-align: center;
@@ -69,7 +68,7 @@ main{
 
 .top-bar .btn{
     width: 100%;
-    height: 5vh;
+    min-height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,7 +77,7 @@ main{
 .top-bar .btn button{
     width: 100%;
     max-width: 140px;
-    height: 100%;
+    height: 40px;
     background: var(--background-gradient-blue);
     border: solid 2px;
     border-color: var(--dark-blue);
@@ -349,12 +348,3 @@ background: var(--darkest-gray-hover);
 .nav-bar div:last-child{
     border-bottom-right-radius: .24em;
 }
-
-
-
-
-
-
-
-
-
